code-push changes

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">loginApp</string>
-</resources>
+   <string moduleConfig="true" name="CodePushDeploymentKey">nrOv9gSXGqahM_lsz8YnpekOwenpN0A8kyWlG</string>
+ </resources>
